<resources>
    <string name="app_name">Spotify2</string>
    <string name="proposeTitle">Propose a song</string>
    <string name="name">Name</string>
    <string name="artist">Artist / Band</string>
    <string name="emailResponse">Send me a confirmation email</string>
    <string name="submitButtonText">Submit</string>
    <string name="songList">List of songs</string>
    <string name="title_activity_details">Details</string>
    <string name="detailsTitle">Details</string>
    <string name="proposeButtonText">Propose A Song</string>
    <string name="deleteButtonText">Delete</string>
    <string name="startApp">Start App</string>
    <string name="registerTitle">Register</string>
    <string name="premium">Premium User</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="registerButtonText">Register</string>
    <string name="loginButtonText">Log In</string>
    <string name="loginTitle">Authentication</string>
</resources>
