<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mihai.spotify2.RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/UserName"
            android:layout_height="100dp"
            android:hint="@string/userName"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/Password"
            android:layout_height="100dp"
            android:hint="@string/password"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <CheckBox
            android:id="@+id/PremiumUser"
            android:layout_height="50dip"
            android:text="@string/premium"
            android:layout_width="fill_parent">
        </CheckBox>

        <Button
            android:id="@+id/SubmitButton"
            android:layout_height="wrap_content"
            android:text="@string/submitButtonText"
            android:onClick="registerUser"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
