<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mihai.spotify2.Propose">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposeTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/Name"
            android:layout_height="100dp"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/Artist"
            android:layout_height="100dp"
            android:hint="@string/artist"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <NumberPicker
            android:id="@+id/selectGenre"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <CheckBox
            android:id="@+id/EmailResponse"
            android:layout_height="50dip"
            android:text="@string/emailResponse"
            android:layout_width="fill_parent">
        </CheckBox>

        <Button
            android:id="@+id/SubmitButton"
            android:layout_height="wrap_content"
            android:text="@string/submitButtonText"
            android:onClick="submitProposal"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
