<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mihai.spotify2.Details">



    <include layout="@layout/content_details" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/DetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/Name"
            android:layout_height="100dp"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/Artist"
            android:layout_height="100dp"
            android:hint="@string/artist"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <NumberPicker
            android:id="@+id/selectGenre"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_height="wrap_content"
            android:text="@string/submitButtonText"
            android:onClick="submitUpdate"
            android:layout_width="fill_parent">
        </Button>

        <Button
            android:id="@+id/DeleteButton"
            android:layout_height="wrap_content"
            android:text="@string/deleteButtonText"
            android:onClick="deleteSong"
            android:layout_width="fill_parent">
        </Button>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
